# ttsmsc

./: CMakeLists.txt
include/: ttsmsc.h
src/: ttsmsc.cpp
